--- a/HTML5/HTML 5 Website with a responsive layout/css/style.css
+++ b/HTML5/HTML 5 Website with a responsive layout/css/style.css
@@ -10,6 +10,6 @@ body{
 
 .container{
     width: 80%; /* Como es una pagina web responsiva se pone un porcentaje, no un tamaño fijo*/
-    margin: auto;
+    margin: auto; /*Por default lo deja a la izquierda, poniendole auto lo centra*/
     
 }
